# CrashBox

./: CLAUDE.md  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  run.sh
docs/: TESTING.md
include/: AIController.h  Collision.h  Config.h  Drift.h  GameWorld.h  Logger.h  MathUtils.h  RaceSystem.h  Renderer.h  Suspension.h  Terrain.h  Tire.h  TowRope.h  Vehicle.h  VehicleCollision.h  Weather.h
src/: main.cpp
tests/: TESTING.md
